--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 <div class="jumbotron text-center">
   <h1>Toxicity Classifier (NLP)</h1>
   <p>-by Vaibhav Haswani<br><br>
-  <a class="btn btn-light" href='https://github.com/VaibhavHaswani/Toxicity-classifier'>	<i class="fa fa-github"> Click for Source</i> </a>
+  <a class="btn btn-light" href='https://github.com/VaibhavHaswani/Toxicity-classifier'>	<i class="fa fa-github"> Click for Source</i> </a>&nbsp;
+  <a class="btn btn-light" href='api.html'>	<i class="fa fa-code"> Open Source API</i> </a>
   </p> 
 </div>
 
